adds some files

--- a/index3.html
+++ b/index3.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<!-- change title and favicon -->
-	<title> Capstone 1 </title>
+	<title> about, contact page </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/learn.css">
 
 	<!-- google fonts -->
 
@@ -41,16 +41,6 @@
 	    </ul>
 	  </div>
 	</nav>
-
-	<div class="jumbotron jumbotron-fluid">
-	  <h1 class="display-4">Hello, world!</h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <a class="btn btn-primary btn-lg" href="#" role="button"> Let's get started </a>
-	</div>
-
-	<!-- <embed src="assets/gitcheat.pdf" width="800px" height="2100px" /> -->
 
 	<!-- jquery first, then popper.js, then bootstrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
