--- a/learn.html
+++ b/learn.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<!-- change title and favicon -->
-	<title> Capstone 1 </title>
+	<title> learn page </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/learn.css">
 
 	<!-- google fonts -->
 
@@ -42,15 +42,62 @@
 	  </div>
 	</nav>
 
-	<div class="jumbotron jumbotron-fluid">
-	  <h1 class="display-4">Hello, world!</h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <a class="btn btn-primary btn-lg" href="#" role="button"> Let's get started </a>
+	<div class="pre-main bg-dark">
+		
 	</div>
 
-	<!-- <embed src="assets/gitcheat.pdf" width="800px" height="2100px" /> -->
+	<main class="container-fluid">
+
+		<div class="row">
+
+			<div class="div-left col-12 col-sm-12 col-lg-4">
+
+				<nav>
+					<ul>
+						<li> section </li>
+						<li> section </li>
+						<li> section </li>
+						<li> section </li>
+						<li> section </li>
+					</ul>
+				</nav>
+				
+			</div> <!-- end div-left -->
+
+			<div class="div-right col-12 col-sm-12 col-lg-8">
+				<h2 class="bg-warning"> Introduction </h2>
+				
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
+				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
+				<!-- <div class="row">
+					<div class="div-pagination col-1"> -->
+				<div class="div-pagination">
+					<ul class="pagination">
+					  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+					  <li class="page-item"><a class="page-link" href="#">1</a></li>
+					  <li class="page-item"><a class="page-link" href="#">2</a></li>
+					  <li class="page-item"><a class="page-link" href="#">3</a></li>
+					  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+					</ul>
+				</div>
+			</div> <!-- end div-right -->
+			
+		</div> <!-- end row 1 -->
+	</main>
+
+	<footer></footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
