--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 	<!-- change title and favicon -->
-	<title> Capstone 1 </title>
+	<title> about page </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/learn.css">
 
 	<!-- google fonts -->
 
@@ -32,31 +32,35 @@
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	    <ul class="navbar-nav ml-auto">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>
+	      <li class="nav-item">
+	        <a class="nav-link" href="index.html"> Home </a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="learn.html"> Learn </a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#"> About </a>
+	      <li class="nav-item active">
+	        <a class="nav-link" href="about.html"> About <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"> Contact </a>
+	        <a class="nav-link" href="contact.html"> Contact </a>
 	      </li>
 	    </ul>
 	  </div>
 	</nav>
 
-	<div class="main jumbotron jumbotron-fluid">
-	  <h1 class="display-4"> Welcome! </h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-	  <a class="btn btn-primary btn-lg" href="learn.html" role="button"> Let's get started </a>
-	</div>
+	<main class="main container-fluid">
 
-	<!-- <embed src="assets/gitcheat.pdf" width="800px" height="2100px" /> -->
+		<h1> About </h1>
+		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+
+	</main>
+
+	<footer></footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
