--- a/learn-the-chessboard.html
+++ b/learn-the-chessboard.html
@@ -79,7 +79,7 @@
 			</div> <!-- end div-left -->
 
 			<div class="div-right col-12 col-sm-12 col-lg-8">
-				<h2 class="bg-warning"> Introduction </h2>
+				<h2 class="bg-warning"> The chessboard </h2>
 				
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -99,7 +99,10 @@
 					<div class="div-pagination col-1"> -->
 				<div class="div-pagination">
 					<ul class="pagination">
-					  <li class="page-item"><a class="page-link" href="#"> back to top </a></li>
+					  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+					  <li class="page-item"><a class="page-link" href="#">1</a></li>
+					  <li class="page-item"><a class="page-link" href="#">2</a></li>
+					  <li class="page-item"><a class="page-link" href="#">3</a></li>
 					  <li class="page-item"><a class="page-link" href="#">Next</a></li>
 					</ul>
 				</div>
