--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
 	</nav>
 
 	<div class="main jumbotron jumbotron-fluid">
-	  <h1 class="display-4"> Welcome! </h1>
-	  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-	  <hr class="my-4">
-	  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+	  <h1 class="display-4"> Welcome to learnchess.com! </h1>
+	  <p class="lead"> Learn how to play chess. </p>
 	  <a class="btn btn-primary btn-lg" href="learn.html" role="button"> Let's get started </a>
 	</div>
 
