--- a/learn-the-pieces.html
+++ b/learn-the-pieces.html
@@ -39,10 +39,11 @@
 	        <a class="nav-link" href="learn.html"> Learn <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"> About </a>
+	        <a class="nav-link" href="about.html"> About
+ </a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#"> Contact </a>
+	        <a class="nav-link" href="contact.html"> Contact </a>
 	      </li>
 	    </ul>
 	  </div>
