--- a/about.html
+++ b/about.html
@@ -60,7 +60,10 @@
 
 	</main>
 
-	<footer></footer>
+	<footer class="bg-warning">
+		<h5> Disclaimer </h5>
+		<p> This is a class project. Photos belong to their respective owners. </p>
+	</footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
