--- a/learn-the-pieces.html
+++ b/learn-the-pieces.html
@@ -89,7 +89,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="king"> King </h3>
+				<h3 id="king"> King <i class="fas fa-chess-king"></i> </h3>
 
 				<p> The king is the most important piece in the chessboard. It can move one square in any direction. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -98,7 +98,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="queen"> Queen </h3>
+				<h3 id="queen"> Queen <i class="fas fa-chess-queen"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -107,7 +107,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="rook"> Rook </h3>
+				<h3 id="rook"> Rook <i class="fas fa-chess-rook"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -116,7 +116,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="bishop"> Bishop </h3>
+				<h3 id="bishop"> Bishop <i class="fas fa-chess-bishop"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -125,7 +125,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="knight"> Knight </h3>
+				<h3 id="knight"> Knight <i class="fas fa-chess-knight"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -134,7 +134,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="pawn"> Pawn </h3>
+				<h3 id="pawn"> Pawn <i class="fas fa-chess-pawn"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -157,7 +157,10 @@
 		</div> <!-- end row 1 -->
 	</main>
 
-	<footer></footer>
+	<footer class="bg-warning">
+		<h5> Disclaimer </h5>
+		<p> This is a class project. Photos belong to their respective owners. </p>
+	</footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
