--- a/learn-the-chessboard.html
+++ b/learn-the-chessboard.html
@@ -112,7 +112,7 @@
 		</div> <!-- end row 1 -->
 	</main>
 
-	<footer class="bg-warning">
+	<footer class="bg-warning fixed-bottom">
 		<h5> Disclaimer </h5>
 		<p> This is a class project. Photos belong to their respective owners. </p>
 	</footer>
