--- a/learn.html
+++ b/learn.html
@@ -105,12 +105,27 @@
 					  <li class="page-item"><a class="page-link" href="#">Next</a></li>
 					</ul>
 				</div>
+
+				<h4> Comments </h4>
+				<div class="clear comment border-left">
+					<div class="div-comment-left">
+						<div class="grey-box3"></div>
+					</div>
+					<div class="div-comment-right">
+						<h5> Juan dela Cruz </h5>
+						<p class="align-left italics">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<p class="align-left"> <a href="#">Like</a> &middot; <a href="#">Reply</a> </p>
+					</div>
+				</div>
 			</div> <!-- end div-right -->
 			
 		</div> <!-- end row 1 -->
 	</main>
 
-	<footer class="bg-warning">
+	<footer class="bg-warning fixed-bottom">
 		<h5> Disclaimer </h5>
 		<p> This is a class project. Photos belong to their respective owners. </p>
 	</footer>
