--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
 	</main>
 
-	<footer class="bg-warning">
+	<footer class="bg-warning fixed-bottom">
 		<h5> Disclaimer </h5>
 		<p> This is a class project. Photos belong to their respective owners. </p>
 	</footer>
