--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 		</form>
 	</main>
 
-	<footer class="bg-warning">
+	<footer class="bg-warning fixed-bottom">
 		<h5> Disclaimer </h5>
 		<p> This is a class project. Photos belong to their respective owners. </p>
 	</footer>
