--- a/forum.html
+++ b/forum.html
@@ -105,7 +105,7 @@
 		</div>
 	</div>
 
-	<footer class="bg-warning">
+	<footer class="bg-warning fixed-bottom">
 		<h5> Disclaimer </h5>
 		<p> This is a class project. Photos belong to their respective owners. </p>
 	</footer>
