adds universal styles, styles disclaimer in footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
+	<link rel="stylesheet" type="text/css" href="assets/css/universal-styles.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	<!-- google fonts -->
