--- a/forum.html
+++ b/forum.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
+	<link rel="stylesheet" type="text/css" href="assets/css/universal-styles.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/forum.css">
 
 	<!-- google fonts -->
@@ -106,8 +107,7 @@
 	</div>
 
 	<footer class="bg-warning fixed-bottom">
-		<h5> Disclaimer </h5>
-		<p> This is a class project. Photos belong to their respective owners. </p>
+		<p> Disclaimer: This is a class project. Photos belong to their respective owners. </p>
 	</footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
