edits disclaimer and adds some styles

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 	</main>
 
 	<footer class="bg-warning fixed-bottom">
-		<p> Disclaimer: This is a class project. Photos belong to their respective owners. </p>
+		<small> <strong> Disclaimer: </strong> This is a class project. Photos belong to their respective owners. </small>
 	</footer>
 
 	<!-- jquery first, then popper.js, then bootstrap -->
