--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-	
+
 	<!-- favicon -->
+	<!-- <link rel="shortcut icon" type="image/x-icon" href="pawn.ico"> -->
 	<link rel="shortcut icon" type="img/png/jpg" href="assets/images/pawn.png">
 </head>
 <body>
