--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="index" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<!-- change title and favicon -->
-	<title> Capstone 1 </title>
+	<title> Home | learnchess.com </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/universal-styles.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 
 	<!-- google fonts -->
 
@@ -58,6 +57,10 @@
 	  <p class="lead"> Learn how to play chess. </p>
 	  <a class="btn btn-primary btn-lg" href="learn.html" role="button"> Let's get started </a>
 	</div>
+	
+	<footer class="bg-warning fixed-bottom">
+		<small> <strong> Disclaimer: </strong> This is a class project. Photos belong to their respective owners. </small>
+	</footer>
 
 	<!-- <embed src="assets/gitcheat.pdf" width="800px" height="2100px" /> -->
 
