--- a/learn-how-to-play.html
+++ b/learn-how-to-play.html
@@ -109,8 +109,9 @@
 					<div class="div-pagination col-1"> -->
 				<div class="div-pagination">
 					<ul class="pagination">
+					  <li class="page-item"><a class="page-link" href="learn-the-pieces.html"> &laquo; Previous </a></li>
 					  <li class="page-item"><a class="page-link" href="#"> back to top </a></li>
-					  <li class="page-item"><a class="page-link" href="learn-what-is-chess.html"> Next </a></li>
+					  <li class="page-item"><a class="page-link" href="learn-whats-next.html"> Next &raquo; </a></li>
 					</ul>
 				</div>
 
