--- a/learn-whats-next.html
+++ b/learn-whats-next.html
@@ -109,8 +109,8 @@
 					<div class="div-pagination col-1"> -->
 				<div class="div-pagination">
 					<ul class="pagination">
+					  <li class="page-item"><a class="page-link" href="learn-how-to-play.html"> &laquo; Previous </a></li>
 					  <li class="page-item"><a class="page-link" href="#"> back to top </a></li>
-					  <li class="page-item"><a class="page-link" href="learn-what-is-chess.html"> Next </a></li>
 					</ul>
 				</div>
 
