--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="learn contact" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<!-- change title and favicon -->
-	<title> about page </title>
+	<title> Contact | learnchess.com </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/universal-styles.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/learn.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/learn.css"> -->
 
 	<!-- google fonts -->
 
