--- a/learn-the-chessboard.html
+++ b/learn-the-chessboard.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="learn learn-the-chessboard" lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<!-- change title and favicon -->
-	<title> learn page </title>
+	<title> Learn | learnchess.com </title>
 
 	<!-- Bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
 	<!-- external css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/universal-styles.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/learn.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/learn.css"> -->
 
 	<!-- google fonts -->
 
@@ -43,8 +42,7 @@
 	        <a class="nav-link" href="learn.html"> Learn <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="about.html"> About
- </a>
+	        <a class="nav-link" href="about.html"> About </a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="contact.html"> Contact </a>
@@ -104,11 +102,9 @@
 					<div class="div-pagination col-1"> -->
 				<div class="div-pagination">
 					<ul class="pagination">
-					  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-					  <li class="page-item"><a class="page-link" href="#">1</a></li>
-					  <li class="page-item"><a class="page-link" href="#">2</a></li>
-					  <li class="page-item"><a class="page-link" href="#">3</a></li>
-					  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+					  <li class="page-item"><a class="page-link" href="learn-what-is-chess.html"> &laquo; Previous </a></li>
+					  <li class="page-item"><a class="page-link" href="#"> back to top </a></li>
+					  <li class="page-item"><a class="page-link" href="learn-the-pieces.html"> Next &raquo; </a></li>
 					</ul>
 				</div>
 			</div> <!-- end div-right -->
