moves hr tag, adds intro content (lorem)

--- a/learn.html
+++ b/learn.html
@@ -82,28 +82,20 @@
 						<li> How to play </li>
 						<li> What's next? </li>
 					</ul>
-
-					<hr>
 				</nav>
+
+				<hr>
 				
 			</div> <!-- end div-left -->
 
 			<div class="div-right col-12 col-sm-12 col-lg-8">
 				<h2 class="bg-warning"> Introduction </h2>
-				
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi facere sunt voluptatem laudantium cupiditate, fuga et, magnam consequatur incidunt deleniti suscipit unde, inventore quasi illum temporibus dignissimos accusantium laborum?</p>
+				<p>Saepe in a repellendus distinctio odit rerum, omnis commodi, amet eius nihil quod necessitatibus iusto officia excepturi quia, veniam dolor assumenda perferendis quos. Cumque illo ut impedit eveniet distinctio vero?</p>
+				<p>Delectus nisi quisquam provident ab illo repellat! Commodi nam modi, molestiae provident placeat soluta magnam ratione beatae, tenetur ut perferendis, hic quae. Quas deserunt quaerat atque culpa dolorem, corporis et.</p>
+				<p>Officiis rem voluptatem debitis tempore iste quae laboriosam, distinctio sapiente hic iure! Officiis, et sint expedita corrupti debitis beatae totam soluta. Velit quas ratione commodi, earum tempore unde consequatur inventore!</p>
+				<p>Animi, aut! Odit quod natus distinctio blanditiis officiis reprehenderit aliquid incidunt, unde, molestiae exercitationem illum! Sed voluptates numquam molestiae alias eos reiciendis temporibus, aperiam quaerat officiis voluptas, nisi aliquam expedita?</p>
 
 				<!-- <div class="row">
 					<div class="div-pagination col-1"> -->
