uses bootstrap nav and adds links on outline

--- a/learn.html
+++ b/learn.html
@@ -63,24 +63,39 @@
 
 			<div class="div-left col-12 col-sm-12 col-lg-4">
 
+				<!-- <ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link active" href="#">Active</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#">Disabled</a>
+					</li>
+				</ul> -->
+
 				<nav class="nav-tutorial">
 
 					<h2> Outline </h2>
-					<ul>
-						<li> Introduction </li>
-						<li> What is chess? </li>
-						<li> The chessboard </li>
-						<li> The pieces </li>
-							<ul>
-								<li> King </li>
-								<li> Queen </li>
-								<li> Rook </li>
-								<li> Bishop </li>
-								<li> Knight </li>
-								<li> Pawn </li>
+					<ul class="nav flex-column">
+						<li class="nav-item"> <a href="learn.html"> Introduction </a> </li>
+						<li class="nav-item"> <a href="learn-what-is-chess.html"> What is chess? </a> </li>
+						<li class="nav-item"> <a href="learn-the-chessboard.html"> The chessboard </a> </li>
+						<li class="nav-item"> <a href="learn-the-pieces.html"> The pieces </a> </li>
+							<ul class="nav flex-column subgroup">
+								<li class="nav-item"> <a href="learn-the-pieces.html#king"> King </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#queen"> Queen </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#rook"> Rook </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#bishop"> Bishop </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#knight"> Knight </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#pawn"> Pawn </a> </li>
 							</ul>
-						<li> How to play </li>
-						<li> What's next? </li>
+						<li class="nav-item"> <a href="learn-how-to-play.html"> How to play </a> </li>
+						<li class="nav-item"> <a href="learn-whats-next.html"> What's next? </a> </li>
 					</ul>
 				</nav>
 
