reverts learn.html outline, fixes cross-referencing

--- a/learn-the-pieces.html
+++ b/learn-the-pieces.html
@@ -98,7 +98,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="king"> King <i class="fas fa-chess-king"></i> </h3>
+				<h3 id="king" class="invisible-block"> King <i class="fas fa-chess-king"></i> </h3>
 
 				<p> The king is the most important piece in the chessboard. It can move one square in any direction. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -107,7 +107,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="queen"> Queen <i class="fas fa-chess-queen"></i> </h3>
+				<h3 id="queen" class="invisible-block"> Queen <i class="fas fa-chess-queen"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -116,7 +116,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="rook"> Rook <i class="fas fa-chess-rook"></i> </h3>
+				<h3 id="rook" class="invisible-block"> Rook <i class="fas fa-chess-rook"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -125,7 +125,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="bishop"> Bishop <i class="fas fa-chess-bishop"></i> </h3>
+				<h3 id="bishop" class="invisible-block"> Bishop <i class="fas fa-chess-bishop"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -134,7 +134,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="knight"> Knight <i class="fas fa-chess-knight"></i> </h3>
+				<h3 id="knight" class="invisible-block"> Knight <i class="fas fa-chess-knight"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -143,7 +143,7 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-				<h3 id="pawn"> Pawn <i class="fas fa-chess-pawn"></i> </h3>
+				<h3 id="pawn" class="invisible-block"> Pawn <i class="fas fa-chess-pawn"></i> </h3>
 
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
