--- a/learn.html
+++ b/learn.html
@@ -63,32 +63,32 @@
 
 			<div class="div-left col-12 col-sm-12 col-lg-4">
 
-				<nav id="navbar-outline" class="navbar navbar-light bg-light">
+				<nav id="nav-outline">
 
-					<!-- <h2> Outline </h2> -->
-					<nav class="nav nav-pills flex-column">
-						<a class="nav-link" href="learn.html"> Introduction </a>
-						<a class="nav-link" href="learn-what-is-chess.html"> What is chess? </a>
-						<a class="nav-link" href="learn-the-chessboard.html"> The chessboard </a>
-						<a class="nav-link" href="learn-the-pieces.html"> The pieces </a>
-						<nav class="nav nav-pills flex-column subgroup">
-							<a class="nav-link" href="learn-the-pieces.html#king"> King </a>
-							<a class="nav-link" href="learn-the-pieces.html#queen"> Queen </a>
-							<a class="nav-link" href="learn-the-pieces.html#rook"> Rook </a>
-							<a class="nav-link" href="learn-the-pieces.html#bishop"> Bishop </a>
-							<a class="nav-link" href="learn-the-pieces.html#knight"> Knight </a>
-							<a class="nav-link" href="learn-the-pieces.html#pawn"> Pawn </a>
-						</nav>
-						<a class="nav-link" href="learn-how-to-play.html"> How to play </a>
-						<a class="nav-link" href="learn-whats-next.html"> What's next? </a>
-					</nav>
+					<h2> Outline </h2>
+					<ul class="nav flex-column">
+						<li class="nav-item"> <a href="learn.html"> Introduction </a> </li>
+						<li class="nav-item"> <a href="learn-what-is-chess.html"> What is chess? </a> </li>
+						<li class="nav-item"> <a href="learn-the-chessboard.html"> The chessboard </a> </li>
+						<li class="nav-item"> <a href="learn-the-pieces.html"> The pieces </a> </li>
+							<ul class="nav flex-column subgroup">
+								<li class="nav-item"> <a href="learn-the-pieces.html#king"> King </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#queen"> Queen </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#rook"> Rook </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#bishop"> Bishop </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#knight"> Knight </a> </li>
+								<li class="nav-item"> <a href="learn-the-pieces.html#pawn"> Pawn </a> </li>
+							</ul>
+						<li class="nav-item"> <a href="learn-how-to-play.html"> How to play </a> </li>
+						<li class="nav-item"> <a href="learn-whats-next.html"> What's next? </a> </li>
+					</ul>
 				</nav>
 
 				<hr>
 				
 			</div> <!-- end div-left -->
 
-			<div class="div-right col-12 col-sm-12 col-lg-8" data-spy="scroll" data-target="#navbar-outline" data-offset="0">
+			<div class="div-right col-12 col-sm-12 col-lg-8">
 				<h2 class="bg-warning"> Introduction </h2>
 
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi facere sunt voluptatem laudantium cupiditate, fuga et, magnam consequatur incidunt deleniti suscipit unde, inventore quasi illum temporibus dignissimos accusantium laborum?</p>
