--- a/learn-the-chessboard.html
+++ b/learn-the-chessboard.html
@@ -15,6 +15,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/learn.css"> -->
 
 	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -57,11 +58,9 @@
 
 	<main class="main container-fluid">
 
-		<hr>
-
 		<div class="row">
 
-			<div class="div-left col-12 col-sm-12 col-lg-4">
+			<div class="div-left col-12 col-sm-12 col-lg-3">
 
 				<nav id="nav-outline">
 
@@ -83,13 +82,11 @@
 						<li class="nav-item"> <a href="learn-whats-next.html"> What's next? </a> </li>
 					</ul>
 				</nav>
-
-				<hr>
 				
 			</div> <!-- end div-left -->
 
-			<div class="div-right col-12 col-sm-12 col-lg-8">
-				<h2 class="bg-warning"> The chessboard </h2>
+			<div class="div-right col-12 col-sm-12 col-lg-9">
+				<h2> The chessboard </h2>
 				
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
