--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/learn.css"> -->
 
 	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -67,15 +68,15 @@
 		  </div>
 		  <div class="form-group">
 		    <label for="contact-email"> Email address </label>
-		    <input type="email" class="form-control" id="contact-email" placeholder="name@example.com">
+		    <input type="email" class="form-control" id="contact-email" placeholder="name@example.com" required>
 		  </div>
 		  <div class="form-group">
 		    <label for="contact-subject"> Subject </label>
-		    <input type="text" class="form-control" id="contact-subject" placeholder="Subject title">
+		    <input type="text" class="form-control" id="contact-subject" placeholder="Subject title" required>
 		  </div>
 		  <div class="form-group">
 		    <label for="contact-message"> Message </label>
-		    <textarea class="form-control" id="contact-message" placeholder="Type your concern here." rows="3"></textarea>
+		    <textarea class="form-control" id="contact-message" placeholder="Type your concern here." rows="3" required></textarea>
 		  </div>
 		  <button type="submit" class="btn btn-primary">Submit</button>
 		</form>
