--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
 
 	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -25,6 +26,7 @@
 </head>
 <body>
 
+	<!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top"> -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
