--- a/learn.html
+++ b/learn.html
@@ -15,6 +15,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="assets/css/learn.css"> -->
 
 	<!-- google fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -24,6 +25,7 @@
 </head>
 <body>
 
+	<!-- <nav class="navbar navbar-expand-lg fixed-top"> -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
@@ -57,11 +59,9 @@
 
 	<main class="main container-fluid">
 
-		<hr>
-
 		<div class="row">
 
-			<div class="div-left col-12 col-sm-12 col-lg-4">
+			<div class="div-left col-12 col-sm-12 col-lg-3">
 
 				<nav id="nav-outline">
 
@@ -83,13 +83,11 @@
 						<li class="nav-item"> <a href="learn-whats-next.html"> What's next? </a> </li>
 					</ul>
 				</nav>
-
-				<hr>
 				
 			</div> <!-- end div-left -->
 
-			<div class="div-right col-12 col-sm-12 col-lg-8">
-				<h2 class="bg-warning"> Introduction </h2>
+			<div class="div-right col-12 col-sm-12 col-lg-9">
+				<h2> Introduction </h2>
 
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi facere sunt voluptatem laudantium cupiditate, fuga et, magnam consequatur incidunt deleniti suscipit unde, inventore quasi illum temporibus dignissimos accusantium laborum?</p>
 				<p>Saepe in a repellendus distinctio odit rerum, omnis commodi, amet eius nihil quod necessitatibus iusto officia excepturi quia, veniam dolor assumenda perferendis quos. Cumque illo ut impedit eveniet distinctio vero?</p>
