--- a/learn.html
+++ b/learn.html
@@ -17,7 +17,8 @@
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
-	<!-- fontawesome -->
+	<!-- fontawesome icons -->
+	<!-- https://fontawesome.com/license -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	
 	<!-- favicon -->
@@ -26,7 +27,7 @@
 <body>
 
 	<!-- <nav class="navbar navbar-expand-lg fixed-top"> -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
 	  	learnchess.com
@@ -100,7 +101,7 @@
 				<div class="div-pagination">
 					<ul class="pagination">
 					  <li class="page-item"><a class="page-link" href="#"> back to top </a></li>
-					  <li class="page-item"><a class="page-link" href="learn-what-is-chess.html"> Next </a></li>
+					  <li class="page-item"><a class="page-link" href="learn-what-is-chess.html"> Next &raquo; </a></li>
 					</ul>
 				</div>
 
