--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
-	<!-- fontawesome -->
+	<!-- fontawesome icons -->
+	<!-- https://fontawesome.com/license -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<!-- favicon -->
