--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 	<!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top"> -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
 	  	learnchess.com
