--- a/forum.html
+++ b/forum.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	  <a class="navbar-brand" href="#">Navbar</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="div-left col-lg-9">
+			<div class="div-left col-md-9">
 				<header>
 					<h3> Paano Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua? </h3>
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 
-			<div class="div-right col-lg-3">
+			<div class="div-right col-md-3">
 				<div class="_card">
 					<div class="_card-body">
 						<h5> Popular Questions </h5>
