--- a/learn-what-is-chess.html
+++ b/learn-what-is-chess.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
 	  	learnchess.com
@@ -61,7 +61,7 @@
 
 		<div class="row">
 
-			<div class="div-left col-12 col-sm-12 col-lg-3">
+			<div class="div-left col-12 col-sm-12 col-md-3">
 
 				<nav id="nav-outline">
 
@@ -86,7 +86,7 @@
 				
 			</div> <!-- end div-left -->
 
-			<div class="div-right col-12 col-sm-12 col-lg-9">
+			<div class="div-right col-12 col-sm-12 col-md-9">
 				<h2> What is chess? </h2>
 				
 				<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
