--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
 	  	learnchess.com
