--- a/learn.html
+++ b/learn.html
@@ -27,7 +27,7 @@
 <body>
 
 	<!-- <nav class="navbar navbar-expand-lg fixed-top"> -->
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 	  <a class="navbar-brand" href="index.html">
 	  	<i class="fas fa-chess-pawn"></i>
 	  	learnchess.com
@@ -62,7 +62,7 @@
 
 		<div class="row">
 
-			<div class="div-left col-12 col-sm-12 col-lg-3">
+			<div class="div-left col-12 col-sm-12 col-md-3">
 
 				<nav id="nav-outline">
 
@@ -87,7 +87,7 @@
 				
 			</div> <!-- end div-left -->
 
-			<div class="div-right col-12 col-sm-12 col-lg-9">
+			<div class="div-right col-12 col-sm-12 col-md-9">
 				<h2> Introduction </h2>
 
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eligendi facere sunt voluptatem laudantium cupiditate, fuga et, magnam consequatur incidunt deleniti suscipit unde, inventore quasi illum temporibus dignissimos accusantium laborum?</p>
