--- a/about.html
+++ b/about.html
@@ -63,6 +63,16 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
+		<h3> Logo explained - why pawn? </h3>
+		<p> The pawn is the most basic piece in chess. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas temporibus quam eius officiis soluta eligendi, blanditiis nam ipsam illum. Vel ea porro itaque aliquam nobis, labore ex at nihil non. </p>
+
+		<p> This project is inspired by the following:</p>
+		<ul>
+			<li> learncpp.com </li>
+			<li> MDN Web Docs </li>
+			<li> Chessmaster </li>
+		</ul>
+
 	</main>
 
 	<footer class="bg-warning fixed-bottom">
