--- a/learn-whats-next.html
+++ b/learn-whats-next.html
@@ -113,9 +113,11 @@
 				</div>
 
 				<h4> Comments </h4>
-				<div class="clear comment border-left">
+				<div class="clear comment">
 					<div class="div-comment-left">
-						<div class="grey-box3"></div>
+						<div class="grey-box3">
+								<i class="fas fa-user-circle fa-2x"></i>
+						</div>
 					</div>
 					<div class="div-comment-right">
 						<h5> Juan dela Cruz </h5>
@@ -123,7 +125,7 @@
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 						consequat.</p>
-						<p class="align-left"> <a href="#">Like</a> &middot; <a href="#">Reply</a> </p>
+						<p class="align-left"> <a class="btn btn-link disabled" href="#">Like</a> &middot; <a class="btn btn-link disabled" href="#">Reply</a> </p>
 					</div>
 				</div>
 			</div> <!-- end div-right -->
