--- a/learn-the-pieces.html
+++ b/learn-the-pieces.html
@@ -159,6 +159,23 @@
 					  <li class="page-item"><a class="page-link" href="learn-how-to-play.html"> Next &raquo; </a></li>
 					</ul>
 				</div>
+
+				<h4> Comments </h4>
+				<div class="clear comment">
+					<div class="div-comment-left">
+						<div class="grey-box3">
+								<i class="fas fa-user-circle fa-2x"></i>
+						</div>
+					</div>
+					<div class="div-comment-right">
+						<h5> Juan dela Cruz </h5>
+						<p class="align-left italics">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat.</p>
+						<p class="align-left"> <a class="btn btn-link disabled" href="#">Like</a> &middot; <a class="btn btn-link disabled" href="#">Reply</a> </p>
+					</div>
+				</div>
 			</div> <!-- end div-right -->
 			
 		</div> <!-- end row 1 -->
